Resolve userChoice promise when cancelling an app banner on desktop.

The result of creating a bookmark app is a pointer to an extension.
When this pointer is null, either the extension failed to be created, or
the user did not accept the installation prompt.

This CL assumes that the user declined the prompt, which is the expected
outcome of a nullptr. It means that the userChoice promise will be
resolved with 'dismissed' when the ExperimentalAppBanners feature is
active on desktop.

BUG=805744

Change-Id: Ibafe6478e665169194da930ab4d210e62b07b759
Reviewed-on: https://chromium-review.googlesource.com/942582
Commit-Queue: Dominick Ng <dominickn@chromium.org>
Reviewed-by: Matt Giuca <mgiuca@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542411}
Former-commit-id: 533a7829796d765942b2e66e2ee736140141f05c